@@ -1058,71 +1058,6 @@
        "The return value of ~A should not be discarded."
        (lvar-fun-name (basic-combination-fun node) t)))))
 
-;;; For each downward funarg, mark the funarg as dynamic extent. For
-;;; now this only works on globally named functions.
-(defun dxify-downward-funargs (node dxable-args fun-name)
-  #+sb-xc-host
-  (declare (ignore fun-name))
-  (let (cleanup)
-    ;; Experience shows that users place incorrect DYNAMIC-EXTENT declarations
-    ;; without due consideration and care. Since the declaration was ignored
-    ;; in more contexts than not, it was relatively harmless.
-    ;; In light of that, only make this transform if willing to generate
-    ;; wrong code, or if the declaration can be trusted.
-    ;; [It's seems to be true that users who want this are OK with lack of
-    ;; tail-callability and/or potential stack exhaustion due to the assumption
-    ;; that callers should always use more stack space. You should really
-    ;; only do that if you don't also need an arbitrarily long call chain.
-    ;; MAP and friends are good examples where this pertains]
-    (when #+sb-xc-host t                ; always trust our own code
-          #-sb-xc-host
-          (or (let ((pkg (sb-xc:symbol-package (fun-name-block-name fun-name))))
-                ;; callee "probably" won't get redefined
-                (or (not pkg) (package-locked-p pkg)))
-              (policy node (= safety 0)))
-          (dolist (arg-spec dxable-args)
-            (when (symbolp arg-spec)
-              ;; If there are keywords, we had better have a FUN-TYPE
-              (let ((fun-type (lvar-type (combination-fun node))))
-                ;; Can't do anything unless we can ascertain where
-                ;; the keyword arguments start.
-                (when (fun-type-p fun-type)
-                  (let* ((keys-index
-                           (+ (length (fun-type-required fun-type))
-                              (length (fun-type-optional fun-type))))
-                         (keywords-supplied
-                           (nthcdr keys-index (combination-args node))))
-                    ;; Everything in a keyword position needs to be
-                    ;; constant.
-                    (loop
-                      (unless (cdr keywords-supplied) (return))
-                      (let ((keyword (car keywords-supplied)))
-                        (unless (constant-lvar-p keyword)
-                          (return))
-                        (when (eq (lvar-value keyword) arg-spec)
-                          ;; Map it to a positional arg
-                          (setq arg-spec (1+ keys-index))
-                          (return))
-                        (setq keywords-supplied (cddr keywords-supplied))
-                        (incf keys-index 2)))))))
-            (when (integerp arg-spec)
-              (let* ((arg (or (nth arg-spec (combination-args node))
-                              (return-from dxify-downward-funargs)))
-                     (use (principal-lvar-use arg)))
-                (when (and (not (lvar-dynamic-extent arg))
-                           ;; We check that the use is a lambda so
-                           ;; that we don't end up getting notes about
-                           ;; not being able to allocate later.
-                           (ref-p use)
-                           (lambda-p (ref-leaf use))
-                           (not (leaf-dynamic-extent (functional-entry-fun (ref-leaf use)))))
-                  (unless cleanup
-                    (setq cleanup (insert-dynamic-extent-cleanup node)))
-                  (let ((dx-info (make-dx-info :kind 'dynamic-extent :value arg
-                                               :cleanup cleanup)))
-                    (setf (lvar-dynamic-extent arg) dx-info)
-                    (push dx-info (cleanup-nlx-info cleanup))))))))))
-
 (defun check-proper-sequences (combination info)
   (when (fun-info-annotation info)
     (map-combination-args-and-types
@@ -1193,13 +1128,8 @@
                               (and (fun-type-p defined-type)
                                    (not (fun-type-p type))))
                       (validate-call-type node type leaf)))
-                  (if (neq (basic-combination-kind node) kind)
-                      (ir1-optimize-combination node)
-                      (let ((name (lvar-fun-name fun)))
-                        (when name
-                          (let ((dxable-args (fun-name-dx-args name)))
-                            (when dxable-args
-                              (dxify-downward-funargs node dxable-args name))))))))))
+                  (unless (eq (basic-combination-kind node) kind)
+                    (ir1-optimize-combination node))))))
         (:known
          (aver info)
          (clear-reoptimize-args)
