@@ -4,7 +4,9 @@ changes relative to sbcl-2.3.2:
   * enhancement: LET-bound anonymous closures declared dynamic extent can now
     be stack allocated, just like closures bound with FLET or
     LABELS. Otherwise-inaccessible closure subparts of objects declared
-    dynamic extent can now also be stack allocated.
+    dynamic extent can now also be stack allocated
+  * optimization: Many standard CL functions which take functional arguments
+    will automatically stack allocate any downward funarg closures.
 
 changes in sbcl-2.3.2 relative to sbcl-2.3.1:
   * incompatible change: the :ORDER long-form-option in
